# mau-tg

./: .env.dist  README.md  pyproject.toml
.github/workflow/: mautg.yaml
mautg/: __main__.py  bot.py  config.py  context.py  filters.py  markups.py  messages.py
mautg/events/: journal.py  router.py
mautg/handlers/: __init__.py  deck.py  player.py  rules.py  session.py  simple_commands.py  turn.py
